--- a/html_css/lesson3/books/rdmjb.html
+++ b/html_css/lesson3/books/rdmjb.html
@@ -82,6 +82,6 @@
         </p>
         <a href="../catalog.html">Back to catalog</a>
         <hr>
-        All rights reserved
+        &copy; All rights reserved
     </body>
 </html>
